refactor: 💡 取得四眾所有個資 API 用 Tsoa 重構
